--- a/META.yml
+++ b/META.yml
@@ -11,6 +11,7 @@ build_requires:
   Test::Output: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
+  Test::Warn: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
