Update META.yml file.

--- a/META.yml
+++ b/META.yml
@@ -33,6 +33,7 @@ requires:
   Error::Pure: 0.08
   Pod::Example: 0.03
   Readonly: 0
+  perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-Pod-Example
   homepage: https://github.com/tupinek/App-Pod-Example
