--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: perl
 perl:
   - "5.60"
+before_install:
+  - cpanm Class::Utils English Error::Pure File::Temp IO::Barf Pod::Example Readonly
