--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.05
   IO::CaptureOutput: 0
+  Readonly: 0
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 1.02
