--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: perl
 perl:
   - "5.6.0"
 before_install:
-  - sudo cpanm Class::Utils English Error::Pure File::Temp IO::Barf Pod::Example Readonly
+  - cpanm Class::Utils English Error::Pure File::Temp IO::Barf Pod::Example Readonly
