--- a/META.yml
+++ b/META.yml
@@ -39,7 +39,7 @@ requires:
   Readonly: 0
   perl: 5.6.0
 resources:
-  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-Pod-Example
+  bugtracker: https://github.com/michal-josef-spacek/App-Pod-Example/issues
   homepage: https://github.com/michal-josef-spacek/App-Pod-Example
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/michal-josef-spacek/App-Pod-Example
