Move code from constructor to run()
Fix and improve tests

--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.59
   File::Object: 0.05
-  Readonly: 0
+  File::Spec::Functions: 0
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 1.02
