--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   Capture::Tiny: 0
   English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
   File::Object: 0.05
   File::Spec::Functions: 0
